# Drive-Scan2

./: .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.electron.js  webpack.react.js
dslib/: .gitignore  Cargo.toml  build.rs  move.js  package.json
dslib/pkg/: dslib-win32.node  dslib.node  index.d.ts  index.js  package.json  test.ts
dslib/src/: ffi.rs  lib.rs  main.rs
dslib/src/_old/: mod.rs
dslib/src/_old/mft/: mod.rs  raw.rs
dslib/src/fallback/: mod.rs
dslib/src/re/: bytes.rs  mod.rs  winapi.rs
dslib/src/unix/: ext4.rs  mod.rs  tests.rs
dslib/src/windows/: alt.rs  boot.rs  data.rs  drive.rs  error.rs  filesystem.rs  mod.rs  scan.rs  verify.rs  winapi.rs
dslib/src/windows/mft/: mod.rs  raw.rs
dslib/src/windows/raw/: boot.rs  mft.rs  mod.rs
dslib/src/windows/re/: record.rs
dslib/testing/: readme.md
src/: App.tsx  FolderList.tsx  FolderPie.tsx  Pie.tsx  conversion.ts  index.html  main.ts  renderer.tsx  scan.ts  treeview.tsx  utility.ts
src/app/: App.tsx
