[package]
name = "dslib"
version = "0.0.1"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
napi = { version = "1.7.5", features = ["serde-json"] }

tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[build-dependencies]
napi-build = "1.1.0"

[target.'cfg(windows)'.dependencies]
# windows dependencies

[target.'cfg(unix)'.dependencies]
# unix dependencies
nix = "0.22.0"
# blkid = "0.2.1"