[package]
name = "dslib"
version = "0.0.1"
authors = []
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
# Force the scanner to use the fallback implementation
use-fallback = []

[[bin]]
path = "src/main.rs"
name = "dslib-dev"

[dependencies]
napi-derive = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
napi = { version = "1.7.5", features = ["serde-json"] }

tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[build-dependencies]
napi-build = "1.1.0"

[target.'cfg(windows)'.dependencies]
# windows dependencies

[target.'cfg(unix)'.dependencies]
# unix dependencies