[package]
name = "dslib"
version = "0.0.1"
authors = []
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
# Force the windows scanner to use the alt implementation
use-winalt = []
# Force the scanner to use the fallback implementation
use-fallback = []

[[bin]]
path = "src/main.rs"
name = "dslib-dev"

[dependencies]
lazy_static = "1.4.0"
napi-derive = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
napi = { version = "1.7.5", features = ["serde-json"] }

tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[build-dependencies]
napi-build = "1.1.0"

[target.'cfg(windows)'.dependencies]
# windows dependencies
num-derive = "0.3.3"
num-traits = "0.2.14"
winapi = { version = "0.3.9", features = ["std", "impl-default", "impl-debug", "fileapi", "winbase", "handleapi", "errhandlingapi"] }

[target.'cfg(unix)'.dependencies]
# unix dependencies